Switched to CTest
The parser is not reentrant (pure) and after reworking the includes some
strange errors appear while parsing. By design this should NEVER EVER
happen during execution, but some tests fails because the order of the
tests actually matter (for example an ID is asserted but the ID is
global and sequentially incremented, thus order dependent). I discovered
this by running the tests shuffled only now, and it is too late to
change. However, given the fact that singletons are required for this
project and reworking the entire design is an useless effort, tests will
be run sequentially from now on.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # EVERY COMMENT IN THIS FILE WILL BE WRITTEN IN CAPS LOCK
-CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.10 FATAL_ERROR)
 PROJECT(spectre-light C CXX)
 SET(CMAKE_C_STANDARD 90) #ANSI C
 SET(CMAKE_CXX_STANDARD 11) #C++11
@@ -88,6 +88,7 @@ SET_PROPERTY(TARGET spectre-full spectre-rgb APPEND_STRING PROPERTY COMPILE_FLAG
 #TESTING FRAMEWORK FOUND
 FIND_PACKAGE(GTest)
 IF(GTEST_FOUND)
+    ENABLE_TESTING()
     IF(CMAKE_BUILD_TYPE STREQUAL "Coverage")
         SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -fprofile-arcs -ftest-coverage")
     ENDIF(CMAKE_BUILD_TYPE STREQUAL "Coverage")
@@ -96,6 +97,7 @@ IF(GTEST_FOUND)
     TARGET_LINK_LIBRARIES(runTests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
     SET_TARGET_PROPERTIES(runTests PROPERTIES COMPILE_FLAGS " -DTESTS -DDEBUG -DTEST_ASSETS=\\\"${CMAKE_CURRENT_SOURCE_DIR}/tests/assets/\\\"")
     SET_PROPERTY(TARGET runTests APPEND_STRING PROPERTY COMPILE_FLAGS " -DCOMPILER_NAME=\\\"${CMAKE_CXX_COMPILER_ID}\\\" -DCOMPILER_VERSION=\\\"${CMAKE_CXX_COMPILER_VERSION}\\\" ")
+    GTEST_DISCOVER_TESTS(runTests AUTO)
 ENDIF(GTEST_FOUND)
 
 #ADD TARGET TO PLOT SOME FANCY DISTRIBUTIONS
