--- a/visualstudio/spectre-light.vcxproj
+++ b/visualstudio/spectre-light.vcxproj
@@ -58,6 +58,8 @@
     <ClCompile Include="..\src\materials\refraction.cpp" />
     <ClCompile Include="..\src\materials\shading_space.cpp" />
     <ClCompile Include="..\src\materials\single_brdf.cpp" />
+    <ClCompile Include="..\src\parsers\chunk.cpp" />
+    <ClCompile Include="..\src\parsers\chunk_wrapper.cpp" />
     <ClCompile Include="..\src\parsers\config_parser.tab.c" />
     <ClCompile Include="..\src\parsers\lex.yy.c" />
     <ClCompile Include="..\src\parsers\parsed_structs.c" />
@@ -147,6 +149,8 @@
     <ClInclude Include="..\src\materials\single_brdf.hpp" />
     <ClInclude Include="..\src\materials\types_metal.h" />
     <ClInclude Include="..\src\materials\types_microfacet.h" />
+    <ClInclude Include="..\src\parsers\chunk.hpp" />
+    <ClInclude Include="..\src\parsers\chunk_wrapper.hpp" />
     <ClInclude Include="..\src\parsers\config_parser.tab.h" />
     <ClInclude Include="..\src\parsers\parsed_structs.h" />
     <ClInclude Include="..\src\parsers\parser_config.hpp" />
@@ -214,6 +218,7 @@
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>NotSet</CharacterSet>
+    <WholeProgramOptimization>false</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-rgb|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -301,6 +306,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-rgb|x64'">
@@ -327,6 +333,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-spectral|x64'">
@@ -362,6 +369,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-rgb|x64'">
@@ -397,6 +405,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
